# RT-DETR

rtdetrv2_pytorch/: pyproject.toml
