[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "rtdetrv2_pytorch"
description = ""
authors = [
    { name = "lyuwenyu" },
]
readme = "README.md"
license = { "text" = "Apache-2.0" }
version = "0.1.0"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.1",
    "torchvision>=0.15.2",
    "pycocotools",
    "PyYAML",
    "tensorboard"
]


[tool.setuptools]
package-dir = {""= "src"}
